🎨Refactor: 리뷰 반영(Java17 toList() 사용)